still fixing header/nav appearance on safari

--- a/kokoro_app/static/kokoro_app/styles.css
+++ b/kokoro_app/static/kokoro_app/styles.css
@@ -44,8 +44,9 @@ html, button {
 }
 
 body {
+    z-index: -999;
     margin: 0;
-    padding-top: 0;
+    margin-top: 100px;
     background-image: var(--svg-green-wave); /* getwaves.io */
     background-size: cover;
     background-position: 0px -60px;
@@ -87,7 +88,9 @@ header {
     margin: 0;
     padding: 0;
     width: 100%;
-    background: var(--color-1);
+    /*background: var(--color-1);*/
+    /* testing changes reflect on mobile */
+    background: red;
     text-align: center;
 
 }
